<resources>
    <string name="app_name">AdminT2T</string>
 trisha-feature-test01
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="didn_t_received_code_resend">Didn’t received code? Resend</string>
    <string name="verify">Verify</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="default_notification_channel_id">admin_t2t_channel</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don’t have an account? Register Now</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="create_account">Create account</string>
    <string name="back_arrow">Back arrow</string>
    <string name="arrow_box">Arrow Box</string>
    <string name="back_arrow_description">Back_arrow</string>
    <string name="sign_in">Sign In</string>
   <string name="subject">Subject</string>
    <string name="welcome_home_illustration">welcome_home_illustration</string>
    <string name="Register">Register</string>
    <string name="confirm_password">Confirm password</string>
   <string name="hello_register_to_get_started">Hello! Register to get started</string>
   <string name="email">Email</string>
   <string name="first_and_last_name">First and Last Name</string>
   <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
   <string name="password">Password</string>
    <string name="priority_format">Priority: %s</string>
    <string name="error_fetching_notifications">Error fetching notifications: %s</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Events">Events</string>
    <string name="Mirror">Mirror\n</string>
    main
</resources>