<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:id="@+id/RegisterFile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:clipToPadding="false"
                android:paddingTop="18dp"
                android:paddingBottom="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="23dp"
                        android:layout_marginBottom="42dp"
                        android:layout_weight="1"
                        android:text="@string/hello_register_to_get_started"
                        android:textColor="#1E232C"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/passwordbox"
                        android:orientation="vertical"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="23dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/firstNamelastNameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints=""
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                                android:hint="@string/first_and_last_name"
                                android:inputType="textPersonName"
                                android:minHeight="48dp"
                                android:textColor="#8390A1"
                                android:textColorHint="#546E7A"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/passwordbox"
                        android:orientation="vertical"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="22dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/emailEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints=""
                                android:digits="abcdefghijklmnopqrstuvwxyz@0123456789."
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:minWidth="48dp"
                                android:minHeight="48dp"
                                android:textColor="#8390A1"
                                android:textColorHint="#546E7A"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginBottom="12dp"
                        android:autofillHints=""
                        android:background="@drawable/passwordbox"
                        android:orientation="vertical"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="21dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="password_toggle">

                            <EditText
                                android:id="@+id/passwordEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints=""
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:minHeight="48dp"
                                android:textColor="#000000"
                                android:textColorHint="#757575"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/passwordbox"
                        android:orientation="vertical"
                        android:paddingHorizontal="19dp"
                        android:paddingVertical="21dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:endIconMode="password_toggle">

                            <EditText
                                android:id="@+id/confirmPasswordEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints=""
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:minHeight="48dp"
                                android:textColor="#8390A1"
                                android:textColorHint="#546E7A"
                                android:textSize="15sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/registerPage_registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="22dp"
                        android:background="@drawable/login_login_button"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingVertical="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.363"
                        app:layout_constraintStart_toStartOf="parent">

                        <Button
                            android:id="@+id/registerButton"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/Register"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/loginTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="61dp"
                        android:text="@string/already_have_an_account_login_now"
                        android:textSize="15sp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>